--- a/ATBlog/index.html
+++ b/ATBlog/index.html
@@ -27,4 +27,6 @@
           <p>Welcome to the blog</p>
         </div>
       </div>
+      <p class="black_centered">Hmm... No new news!</p>
+      <p class="black_centered">Try pulling the website again</p>
 </body>
