--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
                 <div class="column">
                   <h2 id="text5"></h2>
                   <p class="black" id="text6"></p>
-                  <a href="LearnCode.html" id="text7"></a>
+                  <a href="LC_index.html" id="text7"></a>
                 </div>
                 
                 <div class="column">
