--- a/support/learncode/download_support.html
+++ b/support/learncode/download_support.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="2020design.css">
-        <title>Form | Learn Code | Ariel Technologies Support</title>
+        <title>Downloading | Learn Code | Ariel Technologies Support</title>
         <style>
             body,h1 {font-family: "Raleway", sans-serif}
             body, html {height: 100%}
@@ -32,5 +32,31 @@
                   </div>
                 </div>
             </div>
+            <div class="w3-container">
+              <div class="w3-panel w3-win8-olive">
+                <h2 class="white">Chrome, Edge and ChromeOS</h2>
+                <p class="white">To use Chrome, Edge and ChromeOS to learn code, follow this link</p>
+                <a href="ChromeDownload_support.html">How to install Learn Code on Chromium ></a>
+              </div>
+            </div>
+            <div class="w3-container">
+              <div class="w3-panel w3-win8-teal">
+                <h2 class="white">Python</h2>
+                <p class="white">To use Python to learn code, follow this link</p>
+                <a href="PythonDownload_support.html">How to install Learn Code on Python ></a>
+              </div>
+            </div>
+            <div class="w3-container">
+              <div class="w3-panel w3-win8-blue">
+                <h2 class="white">Beta Help?</h2>
+                <p class="white">For help with betas, follow this link</p>
+                <a href="beta.html">Beta Support ></a>
+              </div>
+            </div>
+            <div class="footer">
+              <h1>Copyright 2020 Ariel Technologies</h1>
+              <h3>All rights reserved</h3>
+            </div>
+        </div>
     </body>
 </html>
