--- a/support/learncode/index.html
+++ b/support/learncode/index.html
@@ -26,7 +26,7 @@
                 </div>
               </div>
                 <div class="w3-container">
-                  <div class="w3-panel w3-win8-steel">
+                  <div class="w3-panel w3-hover-shadow w3-win8-steel">
                     <h2 class="white">Downloads</h2>
                     <p class="white">Having a problem downloading? We will walk you step by step to solve your issue!</p>
                     <a href="Download_support.html">Help me with downloading ></a>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="w3-container">
-                <div class="w3-panel w3-win8-steel">
+                <div class="w3-panel w3-hover-shadow w3-win8-steel">
                   <h2 class="white">Running the apps</h2>
                   <p class="white">Having a problem with running the apps? Lets solve your issue!</p>
                   <a href="runtime_support.html">Help me with running my apps ></a>
@@ -42,7 +42,7 @@
               </div>
           </div>
           <div class="w3-container">
-            <div class="w3-panel w3-win8-steel">
+            <div class="w3-panel w3-hover-shadow w3-win8-steel">
               <h2 class="white">Accessibility</h2>
               <p class="white">Having problems with learning? We can help!</p>
               <a href="accessibility_support.html">Help me with accessibility ></a>
@@ -50,7 +50,7 @@
           </div>
       </div>
           <div class="w3-container">
-            <div class="w3-panel w3-win8-steel">
+            <div class="w3-panel w3-hover-shadow w3-win8-steel">
               <h2 class="white">Have another problem?</h2>
               <p class="white">Having another problem? Tell us!</p>
               <a href="other_support.html">Help me with my problem ></a>
